--- a/src/app/(LandingPage)/layout.module.css
+++ b/src/app/(LandingPage)/layout.module.css
@@ -1,19 +1,3 @@
 .container{
-background-image: linear-gradient(
-  115deg,
-  hsl(0deg 0% 5%) 0%,
-  hsl(264deg 17% 8%) 24%,
-  hsl(264deg 21% 11%) 53%,
-  hsl(264deg 22% 13%) 71%,
-  hsl(264deg 23% 14%) 81%,
-  hsl(264deg 23% 16%) 87%,
-  hsl(265deg 24% 17%) 92%,
-  hsl(265deg 24% 19%) 95%,
-  hsl(265deg 24% 21%) 97%,
-  hsl(265deg 24% 22%) 98%,
-  hsl(265deg 24% 23%) 99%,
-  hsl(265deg 24% 25%) 100%,
-  hsl(265deg 24% 26%) 100%,
-  hsl(265deg 24% 27%) 100%
-);
+    background-image: linear-gradient(115deg, var(--linear-gradient-bg-color))
 }
