--- a/src/page-components/Navbar/component/styles.module.css
+++ b/src/page-components/Navbar/component/styles.module.css
@@ -18,7 +18,9 @@
 }
 
 .nav_items {
-    display: block;
+    display: flex;
+    gap: 12px;
+    align-items: center;
     padding: 8px 16px;
     margin: 10px 0;
     cursor: pointer;
